--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
-    "deploy": "np",
+    "deploy": "np --no-2fa",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
