--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
   "homepage": "https://github.com/schulzetenberg/eslint-config-node#readme",
   "dependencies": {
     "eslint": "6.8.0",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-config-prettier": "6.9.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-prettier": "3.1.2",
+    "eslint-config-airbnb-base": "14.2.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-prettier": "3.1.4",
     "prettier": "1.19.1"
   },
   "devDependencies": {
